Fixed alignment issue with skills list in About.

--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -77,6 +77,7 @@ p {
     text-align: center;
     font-size: 20px !important;
     font-weight: 500;
+    justify-content: flex-start;
 }
 
 
